--- a/database/index.html
+++ b/database/index.html
@@ -1,5 +1,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-firestore.js"></script>
+
+<!-- Coloque suas configurações do Firebase aqui!!! -->
 <script>
   var firebaseConfig = {
     apiKey: "AIzaSyB1lTc_BobxDWbK3Jg7eVlk9EyFXf9dQaw",
